javaDSL/src/test/resources/typeSystemTestModels/valid/classes/ClassNoFinalSuperClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.classes;

public class ClassNoFinalSuperClass extends NonFinalClass {

}
